chore: .gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 Thumbs.db
-/HausblumenController_stm32f401ccu6/Thumbs.db
+*.doc
+HausblumenController_status.txt
 /HausblumenController_kicad/Thumbs.db
+/HausblumenController_kicad/*.zip
 /HausblumenController_kicad/HausblumenController_kicad-backups
+/HausblumenController_stm32f401ccu6/Thumbs.db
+/HausblumenController_stm32f401ccu6/*.zip
 /HausblumenController_stm32f401ccu6/.metadata
 /HausblumenController_stm32f401ccu6/*.metadata
 /HausblumenController_stm32f401ccu6/*.settings
 /HausblumenController_stm32f401ccu6/[Oo]utput
 /HausblumenController_stm32f401ccu6/[Dd]ebug
-/HausblumenController_stm32f401ccu6/*.elf
-/HausblumenController_stm32f401ccu6/*.o
-/HausblumenController_stm32f401ccu6/*.hex
 /HausblumenController_stm32f401ccu6/*.doc
-*.doc
-HausblumenController_status.txt
