--- a/.github/workflow/branchUpdate.yaml
+++ b/.github/workflow/branchUpdate.yaml
@@ -2,9 +2,11 @@ name: branchUpdate
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master
   pull_request:
-    branches: [ master ]
+    branches: 
+      - master
 
 jobs:
   update_feature_branch:
