--- a/.github/workflows/branchUpdate.yml
+++ b/.github/workflows/branchUpdate.yml
@@ -15,13 +15,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Важно для получения всей истории коммитов
-
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+      - name: Configure git
+        run: |
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          
       - name: Merge main into development
         run: |
           git checkout development
+          git pull origin develop
           git rebase master
-          # Опционально: git push origin development
+          git push origin development
 
-      - name: Push changes
-        run: git push origin development
+      #- name: Push changes
+      #  run: git push origin development
