--- a/.github/workflows/branchUpdate.yml
+++ b/.github/workflows/branchUpdate.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Merge main into development
         run: |
           git checkout development
-          git pull origin develop
+          git pull origin development
           git rebase master
           git push origin development
 
