--- a/.github/workflows/branchUpdate.yml
+++ b/.github/workflows/branchUpdate.yml
@@ -27,7 +27,9 @@ jobs:
           git checkout development
           git pull origin development
           git rebase master
-          git push origin development
+          # git push origin development
 
-      #- name: Push changes
-      #  run: git push origin development
+      - name: Push changes
+        run: git push origin development
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
